crates/yamlito/tests/snapshots/parser__cst_snapshots@stream__multi_document_with_footers.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::cst_string(&tree)"
input_file: tests/yaml/stream/multi_document_with_footers.yml
---
STREAM@0..49
  DOCUMENT@0..20
    DIRECTIVES_END@0..3 "---"
    NEWLINE@3..4 "\n"
    BLOCK_MAPPING@4..20
      BLOCK_MAPPING_ENTRY@4..19
        SCALAR@4..9
          PLAIN_SCALAR@4..9 "first"
        COLON@9..10 ":"
        WHITESPACE@10..11 " "
        SCALAR@11..19
          PLAIN_SCALAR@11..19 "document"
      NEWLINE@19..20 "\n"
  DOCUMENT_END@20..23 "..."
  NEWLINE@23..24 "\n"
  DOCUMENT@24..45
    DIRECTIVES_END@24..27 "---"
    NEWLINE@27..28 "\n"
    BLOCK_MAPPING@28..45
      BLOCK_MAPPING_ENTRY@28..44
        SCALAR@28..34
          PLAIN_SCALAR@28..34 "second"
        COLON@34..35 ":"
        WHITESPACE@35..36 " "
        SCALAR@36..44
          PLAIN_SCALAR@36..44 "document"
      NEWLINE@44..45 "\n"
  DOCUMENT_END@45..48 "..."
  NEWLINE@48..49 "\n"
