crates/yamlito/tests/snapshots/parser__cst_snapshots@stream__single_with_header_and_footer.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::cst_string(&tree)"
input_file: tests/yaml/stream/single_with_header_and_footer.yml
---
STREAM@0..19
  DOCUMENT@0..15
    DIRECTIVES_END@0..3 "---"
    NEWLINE@3..4 "\n"
    BLOCK_MAPPING@4..15
      BLOCK_MAPPING_ENTRY@4..14
        SCALAR@4..7
          PLAIN_SCALAR@4..7 "key"
        COLON@7..8 ":"
        WHITESPACE@8..9 " "
        SCALAR@9..14
          PLAIN_SCALAR@9..14 "value"
      NEWLINE@14..15 "\n"
  DOCUMENT_END@15..18 "..."
  NEWLINE@18..19 "\n"
